[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyatf"
version = "0.0.1"
authors = [
    { name="Richard Schulze", email="r.schulze@uni-muenster.de" },
    { name="Ari Rasch", email="a.rasch@uni-muenster.de" }
]
description = "Auto-Tuning Framework (ATF) is a generic, general-purpose auto-tuning approach for programs whose tuning parameters may be constrained"
readme = "./PyPI/README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["auto-tuning", "constraints", "optimization", "performance", "tuning"]

[project.urls]
Homepage = "https://atf-project.org/"
Issues = "https://github.com/atf-tuner/pyATF/issues"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
exclude = [
    "/.idea",
    "/.github",
    "/doc",
    "/PyPI",
    "/venv",
    ".gitignore",
    ".pyproject.toml"
]
